--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfolio</title>
-</head>
-<body>
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+
+    <link rel="stylesheet" href="style/portfolio.css">
+</head>
+<body class="open-sans-normal">
+    <header class="Header">
+        <nav>
+            <h3 class="nav-title">Ma<span class="test-primary">r</span>y</h3>
+            <ul>
+        <li><a  class = "dark-2" href=""></a>Portfolio</li>
+        <li><a  class="dark-2" href=""></a>Blog</li>
+        <li><a href=""></a><button class="btn-primary">Hire me</button></li>
+    </ul>
+        </nav>
+        <div class="banner">
+        <div class="banner-content">
+<h4 calss=" banner-greetings dark-2">Hi , I am </h4>
+<h1 calss="banner-title">Mary Hardy</h1>
+<p class="banner-desc">
+    Shot what able cold new see hold.Friendly as an betrayed formerly he.<br>
+     Morning because as to society behaved moments.
+</p>
+<button class="btn-primary">Download CV</button>
+<button Class="btn-primary">Contract</button>
+
+        </div>
+   
+        <img class="banner-profile-pic" src="images/hardy.png" alt="" >
+    </div>
     </header>
     <main>
 
